2004-09-30 Vladimir Hirsl

	Fix for PR 60307 [Templates] Template parameter qualified types not supported
	Added new symbol type: UndefinedTemplateSymbol that represents template paramater
	qualified types. At instantiation the unknown types are replaced with the real ones.
	
	* parser/org/eclipse/cdt/internal/core/parser/Parser.java
	* parser/org/eclipse/cdt/internal/core/parser/ast/complete/ASTNode.java
	* parser/org/eclipse/cdt/internal/core/parser/ast/complete/CompleteParseASTFactory.java
	* parser/org/eclipse/cdt/internal/core/parser/ast/ContainerSymbol.java
	* parser/org/eclipse/cdt/internal/core/parser/ast/IContainerSymbol.java
	* parser/org/eclipse/cdt/internal/core/parser/ast/ParametrizedSymbol.java
	* parser/org/eclipse/cdt/internal/core/parser/ast/ParserSymbolTable.java
	* parser/org/eclipse/cdt/internal/core/parser/ast/TemplateEngine.java
	* parser/org/eclipse/cdt/internal/core/parser/ast/TemplateFactory.java
	+ parser/org/eclipse/cdt/internal/core/parser/ast/UndefinedTemplateSymbol.java
	
	* failures/org/eclipse/cdt/core/parser/failedTests/FailedCompleteParseASTTest.java
	* parser/org/eclipse/cdt/core/parser/tests/CompleteParseASTTemplateTest.java
	* parser/org/eclipse/cdt/core/parser/tests/ParserSymbolTableTest.java
	
2004-09-22 Chris Wiebe

	show warnings instead of errors for invalid filenames
	workaround for bug#24152
	* index/org/eclipse/cdt/internal/core/messages.properties
	* src/org/eclipse/cdt/core/CConventions.java

2004-09-22 Chris Wiebe

	added file naming conventions
	* index/org/eclipse/cdt/internal/core/messages.properties
	* src/org/eclipse/cdt/core/CConventions.java

2004-09-21 Alain Magloire
	* model/org/eclipse/cdt/core/model/IBinary.java
	* model/org/eclipse/cdt/internal/core/model/Archive.java
	* model/org/eclipse/cdt/internal/core/model/Binary.java

2004-09-21 David Inglis

	Lots of changes to the binary parsers
	 - major clean up
	 - remove lots of duplication
	 	- reuse of AR class
	 	- common GnuToolsFactory